deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment
  namespace: ingress-practice
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-deploy
        image: imblacksmith/portfolio:1.0
        ports:
        - containerPort: 80
