service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: ingress-practice
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
